fixed worker and Typeahead overflow

--- a/src/renderer/components/shared/typeahead/Typeahead.scss
+++ b/src/renderer/components/shared/typeahead/Typeahead.scss
@@ -56,7 +56,7 @@ $compact-line-height: 16px;
             padding: 0;
 
             .drop-item {
-                white-space: nowrap;
+                white-space: normal;
 
                 cursor: pointer;
                 padding: $padding-small $padding-default;
